--- a/restaurant.html
+++ b/restaurant.html
@@ -22,7 +22,7 @@
             <h1><a href="/" aria-label="Back to home page">Restaurant Reviews</a></h1>
         </nav>
         <!-- Beginning breadcrumb -->
-        <ul id="breadcrumb">
+        <ul id="breadcrumb" role="navigation" aria-label="Breadcrumb">
             <li><a href="/" aria-label="Back to home page">Home</a></li>
         </ul>
         <!-- End breadcrumb -->
