--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <nav>
-            <h1><a href="https://mohammad-omar-faruk.github.io/Restaurant-Review-Project" aria-label="Home page">Restaurant Reviews</a></h1>
+            <h1><a href="/" aria-label="Home page">Restaurant Reviews</a></h1>
         </nav>
     </header>
 
